# lil-game

./: Cargo.toml  Makefile  README.md  template.yaml
.cargo/: config
client/: Cargo.toml
client/src/: main.rs
service/: Cargo.toml
service/src/: game_core.rs  local.rs  main.rs  tictactoe.rs
src/: local.rs  main.rs  tictactoe.rs
