[package]
name = "tictactoe-lambda-function"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = { version = "1.0.33", features = ["raw_value"] }

lambda_runtime = "0.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
