[package]
name = "tictactui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.8", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.4"
# tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.21", features = ["event-stream"] }
futures = "0.3"
